# pasty

./: .gitignore  AUTHORS  ByteStringHelper.hs  Makefile  README  pasty.cabal  pasty.hs
man/: pasty.1
src/: ByteStringHelper.hs  CommandLineParser.hs  IO.hs  Parser.hs  Paster.hs  PastyData.hs  pasty.hs
test/: Makefile  test.1.out  test.1.ref  test.12.ref  test.16.ref  test.17.ref  test.19.ref  test.2.ref  test.21.ref  test.4.ref  test.5.ref  test.6.ref  test.7.ref  test.9.ref  test.sh
